assets/section-css/reset.css
/* ... */
*,
*::after *::before {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* Selection CSS */
::-moz-selection {
  color: var(--ed-white-color);
  background: var(--ed-primary-color);
}
::selection {
  color: var(--ed-white-color);
  background: var(--ed-primary-color);
}

/* ScrollBar CSS */
/* ::-webkit-scrollbar {
  width: 8px !important;
  height: 8px !important;
  display: block;
}
::-moz-scrollbar {
  width: 8px !important;
  height: 8px !important;
  display: block;
}
::-ms-scrollbar {
  width: 8px !important;
  height: 8px !important;
}
::-webkit-scrollbar-thumb {
  cursor: pointer !important;
  background: var(--ed-primary-color) !important;
  border-radius: 4px;
} */

/* Main Body CSS */
body {
  font-family: var(--ed-font-family);
  background: var(--ed-white-color);
  color: var(--ed-paragraph-color);
  font-size: 16px;
  font-weight: 400;
  line-height: 140%;
}
html {
  font-family: var(--ed-font-family);
  -moz-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
}
html,
body {
  min-height: 100%;
  margin: 0;
}
body.modal-open, 
.modal-open .modal, 
.modal {
  padding-right: 0 !important;
  overflow-x: hidden;
}

/* Custom Fonts  */
@font-face {
  font-family: "Aeonik Pro TRIAL";
  src: url("../fonts/webfonts/AeonikProTRIAL-Bold.woff2") format("woff2"),
    url("../fonts/webfonts/AeonikProTRIAL-Bold.woff") format("woff");
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Aeonik Pro TRIAL";
  src: url("../fonts/webfonts/AeonikProTRIAL-Regular.woff2") format("woff2"),
    url("../fonts/webfonts/AeonikProTRIAL-Regular.woff") format("woff");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Aeonik Pro TRIAL";
  src: url("../fonts/webfonts/AeonikProTRIAL-Light.woff2") format("woff2"),
    url("../fonts/webfonts/AeonikProTRIAL-Light.woff") format("woff");
  font-weight: 300;
  font-style: normal;
  font-display: swap;
}

/* Main Container */
.ed-container {
  max-width: 1170px;
  margin: auto;
}
.ed-container-expand {
  max-width: 1400px;
  margin: auto;
}
.ed-container-fluid {
  padding: 0;
  padding: 0px 80px;
}
@media only screen and (min-width: 1200px) and (max-width: 1400px) {
  .ed-container-expand {
    max-width: 1170px;
  }
}
@media only screen and (max-width: 1199.99px) {
  .ed-container,
  .ed-container-fluid,
  .ed-container-expand {
    padding: 0% 5%;
  }
}

@media only screen and (min-width: 576px) and (max-width: 767px) {
  .ed-container,
  .ed-container-fluid,
  .ed-container-expand {
    padding: 0% 10%;
  }
}
/* Theme Typhography */
img {
  max-width: 100%;
}
article,
aside,
details,
figcaption,
figure,
footer,
header,
main,
menu,
nav,
section,
summary {
  display: block;
}
audio,
canvas,
progress,
video {
  display: inline-block;
  vertical-align: baseline;
}
audio:not([controls]) {
  display: none;
  height: 0;
}
[hidden],
template {
  display: none;
}
a {
  text-decoration: none;
}
a:active,
a:hover {
  outline: 0;
  text-decoration: none;
}
.animated:focus-visible {
  outline: none;
}
.table {
  display: table;
  width: 100%;
  height: 100%;
}
.table-cell {
  display: table-cell;
  vertical-align: middle;
}
img {
  border: 0;
}
svg:not(:root) {
  overflow: hidden;
}
figure {
  margin: 1em 40px;
}
hr {
  box-sizing: content-box;
  height: 0;
}
pre {
  overflow: auto;
}
button,
input,
optgroup,
select,
textarea {
  color: inherit;
  font: inherit;
  margin: 0;
  transition: all 0.4s ease;
}
button:focus-visible {
  outline: none;
}
input:focus-visible {
  outline: none;
}
textarea:focus-visible {
  outline: none;
}
button {
  overflow: visible;
  border: none !important;
}
button,
select {
  text-transform: none;
}
button,
html input[type="button"],
input[type="reset"],
input[type="submit"] {
  -webkit-appearance: button;
  cursor: pointer;
}
button[disabled],
html input[disabled] {
  cursor: default;
}
button::-moz-focus-inner,
input::-moz-focus-inner {
  border: 0;
  padding: 0;
}
input {
  line-height: normal;
}
input[type="checkbox"],
input[type="radio"] {
  box-sizing: border-box;
  padding: 0;
}
input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  height: auto;
}
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}
legend {
  border: 0;
  padding: 0;
}
textarea {
  overflow: auto;
}
optgroup {
  font-weight: bold;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
td,
th {
  padding: 0;
}
.btn-close:focus {
  box-shadow: none;
}
button,
input,
select,
optgroup,
textarea {
  font-family: var(--ed-font-family);
  color: var(--ed-paragraph-color);
  font-weight: 500;
  font-size: 16px;
  line-height: 160%;
}
.c-font,
.c-font a {
  font-family: var(--ed-font-family);
}

a,
button,
input,
textarea {
  font-weight: 400;
}
img,
a,
input,
h1,
h2,
h3,
h4,
h5,
h6,
p {
  transition: all 0.4s ease;
}
dfn,
cite,
em,
i {
  font-style: italic;
}
address {
  margin: 0 0 1.5em;
}
pre {
  background: var(--ed-border-color);

  font-size: 15px;
  font-size: 0.9375rem;
  line-height: 1.6;
  margin-bottom: 1.6em;
  max-width: 100%;
  overflow: auto;
  padding: 1.6em;
}
code,
kbd,
tt,
var {
  font-family: var(--ed-font-family);
  font-size: 15px;
  font-size: 0.9375rem;
}
abbr,
acronym {
  border-bottom: 1px dotted var(--ed-border-color);
  cursor: help;
}
mark,
ins {
  background: var(--ed-white-color) 9c0;
  text-decoration: none;
}
big {
  font-size: 125%;
}
html {
  box-sizing: border-box;
  scroll-behavior: smooth !important;
}
hr {
  background-color: var(--ed-border-color);
  border: 0;
  height: 1px;
  margin-bottom: 1.5em;
}
ul,
ul li,
li {
  list-style-type: disc;
  list-style: none;
  padding: 0;
  margin: 0;
}
a {
  display: inline-block;
}
dt {
  font-weight: bold;
}
dd {
  margin: 0 1.5em 1.5em;
}
img {
  height: auto;
  max-width: 100%;
}
figure {
  margin: 1em 0;
}
/* ... */

